--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "eslint": "^6.5.1",
+    "express": "^4.17.1",
     "normalize-url": "^4.5.0",
     "pdf2pic": "^1.3.9",
     "polka": "^0.5.2",
